# riscv-test

./: Cargo.toml  README.md  memory.x  runner.sh
.cargo/: config
src/: main.rs
