[package]
name = "riscv-test"
version = "0.1.0"
authors = ["Gregory Mitrano <gregory.mitrano@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv-rt = "0.8"
riscv = "0.6"
panic-halt = "0.2"

[profile.dev.package."*"]
opt-level = "z"

[profile.dev]
opt-level = 1
panic = "abort"
overflow-checks = false
